# ET-DataStorage

./: README.md  pyproject.toml  tasks.py
api/: app.py
shared/: manager.py  mongo.py  schemas.py
tests/: conftest.py  test_api.py
